Fixing an issue with overlapping content in FireFox using the caption tag. Fixes bug #960823

--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -286,7 +286,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
 }
 
 .table_header {
-  height: 30px;
+  min-height: 35px;
   padding: 5px 0;
 }
 
